Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los feos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hilo rojo -->
+<li>
+  <a href="../Peliculas/pelicula968.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mZ8Z4jCDVlBflEuCOwH3NCDyqBP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El hilo rojo 2025</span>
+    <span class="hidden">Abril, una azafata rebelde y audaz, y Manuel, un tímido y tradicional empresario, se conocen en un avión y sienten instantáneamente una atracción innegable.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los feos -->
 <li>
   <a href="../Peliculas/pelicula967.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
