Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hilo rojo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen A Willy -->
+<li>
+  <a href="../Peliculas/pelicula969.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vD6DxzGLxudNukkfe0A6EuyhyVr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Liberen A Willy 1993</span>
+    <span class="hidden">Willy es una impresionante orca confinada en un pequeño parque acuático en el Pacífico Norte, lejos de su hábitat natural y separada de toda su familia y hogar. Nadie en el parque entiende el comportamiento y los sentimentos de Willy, excepto un muchacho de 12 años, quien al igual que Willy sabe muy bien lo que significa estar lejos de su familia.</span>
+  </a>
+</li>
+<!--FIN--><!-- El hilo rojo -->
 <li>
   <a href="../Peliculas/pelicula968.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
