--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Liberen A Willy -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Liberen a Willy 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula970.html">
+    <img src="https://image.tmdb.org/t/p/original/nl4nAS1PLUp38LfCNGbe3norTUP.jpg" alt="Liberen a Willy 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Liberen a Willy 2</div>
+  <div class="text-xs text-white/70">1995</div>
+</article><!-- Liberen A Willy -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula969.html">
     <img src="https://image.tmdb.org/t/p/original/vD6DxzGLxudNukkfe0A6EuyhyVr.jpg" alt="Liberen A Willy" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
