--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen A Willy -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen a Willy 2 -->
+<li>
+  <a href="../Peliculas/pelicula970.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nl4nAS1PLUp38LfCNGbe3norTUP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Liberen a Willy 2 1995</span>
+    <span class="hidden">Hace dos años, Jesse liberó a Willy, una orca cautiva. Ahora vive felizmente con sus padres adoptivos. Un día, su hermanastro Elvis, le comunica la muerte de su verdadera madre. Durante el viaje, Jesse vuelve a encontrarse con su amiga Willy y con el Indio Randolph. Una gran amistad se establece entre Jesse y la nieta de este último.</span>
+  </a>
+</li>
+<!--FIN--><!-- Liberen A Willy -->
 <li>
   <a href="../Peliculas/pelicula969.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
