--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen a Willy 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen a Willy 3 El rescate -->
+<li>
+  <a href="../Peliculas/pelicula971.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7POi2UyCiQRASsvat2QKYhkp21s.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Liberen a Willy 3 El rescate 1997</span>
+    <span class="hidden">Jesse tiene ya 16 años y debe cuidar todo lo que pueda de la orca Willy, haciendo frente entre otros obstáculos al tráfico ilegal de animales. Le ayudarán su amigo Randolph y un sarcástico científico.</span>
+  </a>
+</li>
+<!--FIN--><!-- Liberen a Willy 2 -->
 <li>
   <a href="../Peliculas/pelicula970.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
