--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Liberen a Willy 3 El rescate -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Liberen a Willy 4 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula972.html">
+    <img src="https://image.tmdb.org/t/p/original/9Nehp6FGnWW9d3Uj4hyOHiFOU2b.jpg" alt="Liberen a Willy 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Liberen a Willy 4</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Liberen a Willy 3 El rescate -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula971.html">
     <img src="https://image.tmdb.org/t/p/original/7POi2UyCiQRASsvat2QKYhkp21s.jpg" alt="Liberen a Willy 3 El rescate" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
