Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen a Willy 3 El rescate -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen a Willy 4 -->
+<li>
+  <a href="../Peliculas/pelicula972.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9Nehp6FGnWW9d3Uj4hyOHiFOU2b.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Liberen a Willy 4 2010</span>
+    <span class="hidden">Kirra (Bindi Irwin) una niña australiana de once años, se ve obligada a pasar una temporada con su abuelo (Beau Bridges) en Sudáfrica. Una noche su abuelo encuentra una orca atrapada en medio de una tempestad y decide capturarla. Nace entonces una gran amistad entre la niña y el animal, al que llama Willy. Cuando la orca crece y resulta imposible seguir cuidándola, la única solución que se presenta es venderla a un individuo sin escrúpulos cuya intención es ganar dinero exhibiéndola en un parque temático. Kirra, aterrada, intentará que su amiga vuelva a vivir libremente en el océano.</span>
+  </a>
+</li>
+<!--FIN--><!-- Liberen a Willy 3 El rescate -->
 <li>
   <a href="../Peliculas/pelicula971.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
