Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Liberen a Willy 4 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bailarina -->
+<li>
+  <a href="../Peliculas/pelicula973.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/llpNGX1H5sQdGRHeteyFXELuoMz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bailarina 2025</span>
+    <span class="hidden">Eve Macarro es una asesina entrenada por la Ruska Roma desde su infancia, la misma organización criminal encargada del adiestramiento de John Wick. En esta violenta historia de venganza, Eve intentará por todos los medios averiguar quién está detrás del asesinato de su padre. En su lucha por conocer la verdad, tendrá que atenerse a las normas de la Alta Mesa y, por supuesto, a las del Hotel Continental, donde descubrirá que existen secretos ocultos sobre su pasado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Liberen a Willy 4 -->
 <li>
   <a href="../Peliculas/pelicula972.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
