Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bailarina -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una pareja explosiva -->
+<li>
+  <a href="../Peliculas/pelicula974.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wQjBF386gMhiaQucVWwQYdtJ22s.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una pareja explosiva 1998</span>
+    <span class="hidden">Dos detectives diferentes son asignados en un mismo caso. Ambos tendrán que adaptarse a las costumbres del otro para poder concluir su trabajo con éxito, pero no va a ser una tarea fácil. El detective inspector Lee es el rey de las artes marciales y pertenece a la Royal Hong Kong Police. Su pupila preferida es la hija de once años del Cónsul chino, de la cual el inspector Lee es su guardaespaldas y su mejor amigo. Esta muchacha es capturada en los Estados Unidos por un peligroso grupo criminal.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bailarina -->
 <li>
   <a href="../Peliculas/pelicula973.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
