Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una pareja explosiva -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una pareja explosiva 2 -->
+<li>
+  <a href="../Peliculas/pelicula975.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/no3uHLYK0lQyjXiIXIj82fgUsZX.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una pareja explosiva 2 2001</span>
+    <span class="hidden">El detective James Carter se encuentra de vacaciones en Hong Kong con su buen amigo el detective Lee. Mientras Carter está ansioso por dedicarse a la juerga y las mujeres, Lee tiene que enfrentarse con un jefe de las Tríadas, responsable del asesinato de dos funcionarios de la embajada norteamericana. Conforme avancen en la investigación, descubrirán una trama de distribución de billetes falsos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una pareja explosiva -->
 <li>
   <a href="../Peliculas/pelicula974.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
