Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,13 +94,22 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una pareja explosiva 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El mono -->
+<li>
+  <a href="../Peliculas/pelicula977.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/aPAzmD8YAErjz5GzQ1tgkTlv28S.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El mono 2025</span>
+    <span class="hidden">Cuando los gemelos Hal y Bill descubren el antiguo mono de juguete de su padre en el ático, una serie de truculentas muertes comienzan a ocurrir a su alrededor. Los hermanos deciden tirar el mono y continuar con sus vidas, distanciándose con el paso de los años. Pero cuando las misteriosas muertes vuelven a sucederse, los hermanos deberán reunirse para destruir el mono antes de que acabe con las vidas de todos a su alrededor.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una pareja explosiva 3 -->
 <li>
   <a href="../Peliculas/pelicula976.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/2UeIKPirME0l4UeUuv5TklDezR4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Una pareja explosiva 3 2007</span>
-    <span class="hidden">El corazón de París esconde un secreto mortal. Al otro lado del mundo, en Los Ángeles, el embajador Han está a punto de divulgar ese secreto. Tiene en su poder información sobre los mecanismos internos de las Tríadas, el sindicato del crimen más poderoso y más conocido del mundo. El embajador ha descubierto la identidad de Shy Shen, elemento clave del vasto anillo del crimen, y está a punto de revelarlo al Tribunal Penal Mundial, hasta que la bala de un asesino lo silencia para siempre. Las Tríadas harán cualquier cosa para asegurarse de que sus secretos permanezcan enterrados, y solamente existe una esperanza para poder detenerlos… El detective Carter, del departamento de policía de Los Ángeles, y el inspector chino Lee viajan a París para detener una conspiración criminal a nivel global y para salvar la vida de un vieja amiga: la hija del embajador Han: Soo Yung.</span>
+    <span class="hidden">El corazón de París esconde un secreto mortal. Al otro lado del mundo, en Los Ángeles, el embajador Han está a punto de divulgar ese secreto. Tiene en su poder información sobre los mecanismos internos de las Tríadas, el sindicato del crimen más poderoso y más conocido del mundo. El embajador ha descubierto la identidad de Shy Shen, elemento clave del vasto anillo del crimen, y está a punto de revelarlo al Tribunal Penal Mundial, hasta que la bala de un asesino lo silencia para siempre. Las Tríadas harán cualquier cosa para asegurarse de que sus secretos permanezcan enterrados, y solamente existe una esperanza para poder detenerlos⬦ El detective Carter, del departamento de policía de Los Ángeles, y el inspector chino Lee viajan a París para detener una conspiración criminal a nivel global y para salvar la vida de un vieja amiga: la hija del embajador Han: Soo Yung.</span>
   </a>
 </li>
 <!--FIN--><!-- Una pareja explosiva 2 -->
