Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El mono -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Caracortada -->
+<li>
+  <a href="../Peliculas/pelicula978.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iDABT5GD9OQmFiXM3wR0DJIxtkY.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Caracortada 1983</span>
+    <span class="hidden">Tony Montana es un emigrante cubano frío e implacable que se instala en Miami con el propósito de convertirse en un gángster importante, y poder así ganar dinero y posición. Con la colaboración de su amigo Manny Rivera inicia una fulgurante carrera delictiva, como traficante de cocaína, con el objetivo de acceder a la cúpula de una organización de narcos.</span>
+  </a>
+</li>
+<!--FIN--><!-- El mono -->
 <li>
   <a href="../Peliculas/pelicula977.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
