Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Caracortada -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bernardo y Bianca -->
+<li>
+  <a href="../Peliculas/pelicula979.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jagftpq3KOHJgWj0Y51xBiemve3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bernardo y Bianca 1977</span>
+    <span class="hidden">Una niña huérfana que ha sido secuestrada envía una nota dentro de una botella pidiendo ayuda. Bernardo y Bianca, dos valientes ratones, miembros de la Sociedad Internacional de Rescate, reciben el mensaje que los llevará al peligroso «Pantano del Diablo». Allí, ayudados por la libélula Evinrude y los habitantes del pantano, vivirán un sinfín de emocionantes aventuras luchando contra la malvada Madame Medusa</span>
+  </a>
+</li>
+<!--FIN--><!-- Caracortada -->
 <li>
   <a href="../Peliculas/pelicula978.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
