--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bernardo y Bianca -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bernardo y Bianca 2: En Cangurolandia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula980.html">
+    <img src="https://image.tmdb.org/t/p/original/dtha0Ei9hWifyOOTsf9Z0Pnop8K.jpg" alt="Bernardo y Bianca 2: En Cangurolandia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Bernardo y Bianca 2: En Cangurolandia</div>
+  <div class="text-xs text-white/70">1990</div>
+</article><!-- Bernardo y Bianca -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula979.html">
     <img src="https://image.tmdb.org/t/p/original/jagftpq3KOHJgWj0Y51xBiemve3.jpg" alt="Bernardo y Bianca" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
