Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bernardo y Bianca -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bernardo y Bianca 2: En Cangurolandia -->
+<li>
+  <a href="../Peliculas/pelicula980.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dtha0Ei9hWifyOOTsf9Z0Pnop8K.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bernardo y Bianca 2: En Cangurolandia 1990</span>
+    <span class="hidden">Los agentes de la R.A.S., la Srta. Bianca y Bernardo, corren a Australia para salvar a un niño y a una rara águila dorada de un cazador furtivo asesino.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bernardo y Bianca -->
 <li>
   <a href="../Peliculas/pelicula979.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
