Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bernardo y Bianca 2: En Cangurolandia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 2067 -->
+<li>
+  <a href="../Peliculas/pelicula981.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7D430eqZj8y3oVkLFfsWXGRcpEG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">2067 2020</span>
+    <span class="hidden">En el futuro cercano, el cambio climático ha provocado la necesidad de emplear oxígeno artificial para poder respirar. Con su mujer enferma y pocas esperanzas de sobrevivir, Ethan (Smit-McPhee) se ve obligado a viajar al futuro para buscar una cura para su misteriosa enfermedad. Sin saber en quién confiar, debe navegar por un futuro repleto de peligros y sin la certeza de poder regresar a casa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bernardo y Bianca 2: En Cangurolandia -->
 <li>
   <a href="../Peliculas/pelicula980.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
