--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 2067 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi nombre es Khan -->
+<li>
+  <a href="../Peliculas/pelicula982.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jtpPxVJkYKCaxVrnetK2YYH9Fqy.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi nombre es Khan 2010</span>
+    <span class="hidden">Rizwan Khan (Tanay Chheda) es un niño musulmán que se crió con su madre (Zarina Wahab) en el Borivali sección de Bombay en la India y que sufre de síndrome de Asperger. Ya como un adulto (Shahrukh Khan), Rizwan se enamora de una hindú madre soltera, Mandira (kajol) que vive en San Francisco. Después de los atentados del 9/11, Rizwan es detenido como sospechoso de terrorismo por la autoridades por la conducta sospechosa que tiene a razon de su discapacidad. Después de su arresto, él se reúne con Radha (Sheetal Menon), un terapeuta que ayuda a superar los traumas vividos. Rizwan entonces comienza un viaje para encontrar y reunirse con el Presidente Barack Obama (Christopher B. Duncan), a fin de limpiar su nombre.</span>
+  </a>
+</li>
+<!--FIN--><!-- 2067 -->
 <li>
   <a href="../Peliculas/pelicula981.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
