Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi nombre es Khan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cherry -->
+<li>
+  <a href="../Peliculas/pelicula983.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/x6p8I3KOuh7QmZzCQgGmGM7PzEK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cherry 2021</span>
+    <span class="hidden">Es la historia real de Nico Walker, quien volvió de la guerra de Iraq con un trastorno de estrés postraumático no diagnosticado que le llevó primero a hacerse adicto al opio y posteriormente a robar bancos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi nombre es Khan -->
 <li>
   <a href="../Peliculas/pelicula982.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
