Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cherry -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cuando acecha la maldad -->
+<li>
+  <a href="../Peliculas/pelicula984.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9Ly4S99McgnhO50XikTGguPFNvo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cuando acecha la maldad 2023</span>
+    <span class="hidden">Los vecinos de un pequeño pueblo rural descubren que un demonio está a punto de nacer entre ellos. Intentan desesperadamente escapar antes de que nazca el mal, pero puede que sea demasiado tarde.</span>
+  </a>
+</li>
+<!--FIN--><!-- Cherry -->
 <li>
   <a href="../Peliculas/pelicula983.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
