Crear/Actualizar Categorias/familia/index.html

--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bernardo y Bianca 2: En Cangurolandia -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un Gallo con muchos huevos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula985.html">
+    <img src="https://image.tmdb.org/t/p/original/eEqfi9fbsqHMJd78g4tawtIhc8n.jpg" alt="Un Gallo con muchos huevos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un Gallo con muchos huevos</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- Bernardo y Bianca 2: En Cangurolandia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula980.html">
     <img src="https://image.tmdb.org/t/p/original/dtha0Ei9hWifyOOTsf9Z0Pnop8K.jpg" alt="Bernardo y Bianca 2: En Cangurolandia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
