Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cuando acecha la maldad -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un Gallo con muchos huevos -->
+<li>
+  <a href="../Peliculas/pelicula985.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/eEqfi9fbsqHMJd78g4tawtIhc8n.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un Gallo con muchos huevos 2015</span>
+    <span class="hidden">Toto ha crecido y ahora es un joven gallito. Un ranchero malvado engaña a la dueña del rancho donde vive y la obliga a apostar la propiedad en una pelea de gallos en el palenque. Toto es la única opción para defender su hogar, por lo que deberá entrenarse en tan solo una semana y vencer al gallo campeón del palenque.</span>
+  </a>
+</li>
+<!--FIN--><!-- Cuando acecha la maldad -->
 <li>
   <a href="../Peliculas/pelicula984.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
