--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un Gallo con muchos huevos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un rescate de huevitos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula986.html">
+    <img src="https://image.tmdb.org/t/p/original/ewrIYKTLaqerwznGzNhmqr0huTs.jpg" alt="Un rescate de huevitos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un rescate de huevitos</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- Un Gallo con muchos huevos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula985.html">
     <img src="https://image.tmdb.org/t/p/original/eEqfi9fbsqHMJd78g4tawtIhc8n.jpg" alt="Un Gallo con muchos huevos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
