Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un Gallo con muchos huevos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un rescate de huevitos -->
+<li>
+  <a href="../Peliculas/pelicula986.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ewrIYKTLaqerwznGzNhmqr0huTs.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un rescate de huevitos 2021</span>
+    <span class="hidden">Toto y Di ahora viven una nueva vida en el granero con sus dos hijos sin experiencia, muy traviesos, pero adorables. Sin embargo, estos son capturados por una cocinera de huevos cuando los llevan a África para un evento de comida, a lo que Toto y sus amigos se embarcan en una nueva misión de rescate para salvar a los huevitos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un Gallo con muchos huevos -->
 <li>
   <a href="../Peliculas/pelicula985.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
