--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un rescate de huevitos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matrix resurrecciones -->
+<li>
+  <a href="../Peliculas/pelicula987.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/NPLjpvhkDVTt8Gn3ITNQGABHhd.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Matrix resurrecciones 2021</span>
+    <span class="hidden">El retorno a un mundo de dos realidades: una, la vida cotidiana; la otra, lo que hay detrás de ella. Para descubrir si su realidad es un constructo, para verdaderamente conocerse a sí mismo, el Sr. Anderson deberá elegir seguir al conejo blanco una vez más.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un rescate de huevitos -->
 <li>
   <a href="../Peliculas/pelicula986.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
