--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Matrix resurrecciones -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Matrix: Revoluciones -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula988.html">
+    <img src="https://image.tmdb.org/t/p/original/zi1UMF9jIM2JnQz0u2AyUw8QFZi.jpg" alt="Matrix: Revoluciones" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Matrix: Revoluciones</div>
+  <div class="text-xs text-white/70">2003</div>
+</article><!-- Matrix resurrecciones -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula987.html">
     <img src="https://image.tmdb.org/t/p/original/NPLjpvhkDVTt8Gn3ITNQGABHhd.jpg" alt="Matrix resurrecciones" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
