Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matrix: Revoluciones -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matrix recargado -->
+<li>
+  <a href="../Peliculas/pelicula989.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ayZkaN2f3ASjWW8ooCfuJT3T8Va.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Matrix recargado 2003</span>
+    <span class="hidden">Neo y sus aliados corren contra el tiempo antes de que las máquinas descubran la ciudad de Zion y la destruyan. Mientras busca la verdad sobre la Matrix, Neo debe salvar a Trinity de un oscuro destino.</span>
+  </a>
+</li>
+<!--FIN--><!-- Matrix: Revoluciones -->
 <li>
   <a href="../Peliculas/pelicula988.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
