--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un rescate de huevitos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El club de los villanos con Mickey y sus amigos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula990.html">
+    <img src="https://image.tmdb.org/t/p/original/wK49KfZsVgyEKeFtIJUMWpFhBR4.jpg" alt="El club de los villanos con Mickey y sus amigos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El club de los villanos con Mickey y sus amigos</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Un rescate de huevitos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula986.html">
     <img src="https://image.tmdb.org/t/p/original/ewrIYKTLaqerwznGzNhmqr0huTs.jpg" alt="Un rescate de huevitos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
