--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bernardo y Bianca 2: En Cangurolandia -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El club de los villanos con Mickey y sus amigos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula990.html">
+    <img src="https://image.tmdb.org/t/p/original/wK49KfZsVgyEKeFtIJUMWpFhBR4.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El club de los villanos con Mickey y sus amigos</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Bernardo y Bianca 2: En Cangurolandia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula980.html">
     <img src="https://image.tmdb.org/t/p/original/dtha0Ei9hWifyOOTsf9Z0Pnop8K.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
