Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matrix recargado -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El club de los villanos con Mickey y sus amigos -->
+<li>
+  <a href="../Peliculas/pelicula990.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wK49KfZsVgyEKeFtIJUMWpFhBR4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El club de los villanos con Mickey y sus amigos 2001</span>
+    <span class="hidden">Los villanos de las populares películas animadas de Disney se reúnen en la Casa del Ratón con planes para hacerse cargo. Pronto, los villanos se apoderan de la casa y expulsan a Mickey, Donald y Goofy. Todo depende de Mickey y sus amigos para derrocar el mal y devolver la Casa del Ratón a la normalidad - o tan cerca de lo normal como sea.</span>
+  </a>
+</li>
+<!--FIN--><!-- Matrix recargado -->
 <li>
   <a href="../Peliculas/pelicula989.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
