--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Matrix recargado -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Animales Fantasticos: Y Donde Encontrarlos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula991.html">
+    <img src="https://image.tmdb.org/t/p/original/wduJFXlHQTIw1TBf6kTO3bHf2VN.jpg" alt="Animales Fantásticos: Y Dónde Encontrarlos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Animales Fantásticos: Y Dónde Encontrarlos</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Matrix recargado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula989.html">
     <img src="https://image.tmdb.org/t/p/original/ayZkaN2f3ASjWW8ooCfuJT3T8Va.jpg" alt="Matrix recargado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
