--- a/Plataforma/warnerbros/index.html
+++ b/Plataforma/warnerbros/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Matrix recargado -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Animales Fantasticos: Y Donde Encontrarlos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula991.html">
+    <img src="https://image.tmdb.org/t/p/original/wduJFXlHQTIw1TBf6kTO3bHf2VN.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Animales Fantásticos: Y Dónde Encontrarlos</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Matrix recargado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula989.html">
     <img src="https://image.tmdb.org/t/p/original/ayZkaN2f3ASjWW8ooCfuJT3T8Va.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
