--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El club de los villanos con Mickey y sus amigos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Animales Fantasticos: Y Donde Encontrarlos -->
+<li>
+  <a href="../Peliculas/pelicula991.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wduJFXlHQTIw1TBf6kTO3bHf2VN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Animales Fantásticos: Y Dónde Encontrarlos 2016</span>
+    <span class="hidden">“Animales fantásticos y dónde encontrarlos” comienza en 1926 a medida que Newt Scamander acaba de terminar una excursión por todo el mundo para encontrar y documentar una extraordinaria variedad de creaturas mágicas. Al llegar a Nueva York para una breve escala, quizás pudo haber llegado y partido sin incidente... si no fuera por un No-Maj (término estadounidense para Muggle) llamado Jacob, un caso mágico perdido y la escapada de algunas de las bestias fantásticas de Newt, lo que podría significar problemas para los mundos tanto de los magos como de los No-Maj.</span>
+  </a>
+</li>
+<!--FIN--><!-- El club de los villanos con Mickey y sus amigos -->
 <li>
   <a href="../Peliculas/pelicula990.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
