--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Animales Fantasticos: Y Donde Encontrarlos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Animales Fantasticos 2: Los Crimenes de Grindelwald -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula992.html">
+    <img src="https://image.tmdb.org/t/p/original/p4BabO5lvfXnIsVIBLDpN2wLORz.jpg" alt="Animales Fantásticos 2: Los Crímenes de Grindelwald" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Animales Fantásticos 2: Los Crímenes de Grindelwald</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Animales Fantasticos: Y Donde Encontrarlos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula991.html">
     <img src="https://image.tmdb.org/t/p/original/wduJFXlHQTIw1TBf6kTO3bHf2VN.jpg" alt="Animales Fantásticos: Y Dónde Encontrarlos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
