Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Animales Fantasticos 2: Los Crimenes de Grindelwald -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hablame -->
+<li>
+  <a href="../Peliculas/pelicula993.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nfY0LdXZzggFKfjhyHVEHZfO484.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Háblame 2023</span>
+    <span class="hidden">La solitaria adolescente Mia se engancha a la emoción de invocar espíritus utilizando una mano embalsamada, pero cuando se enfrenta a un alma que dice ser su madre muerta, desata una plaga de fuerzas sobrenaturales y se debate entre decidir en quién puede confiar: en los vivos o en los muertos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Animales Fantasticos 2: Los Crimenes de Grindelwald -->
 <li>
   <a href="../Peliculas/pelicula992.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
