--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Matrix recargado -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Sin Lugar para los Debiles -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula994.html">
+    <img src="https://image.tmdb.org/t/p/original/wvi8k5fqjvVqTD573YX9eRLRo0F.jpg" alt="Sin Lugar para los Débiles" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Sin Lugar para los Débiles</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Matrix recargado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula989.html">
     <img src="https://image.tmdb.org/t/p/original/ayZkaN2f3ASjWW8ooCfuJT3T8Va.jpg" alt="Matrix recargado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
