Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hablame -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sin Lugar para los Debiles -->
+<li>
+  <a href="../Peliculas/pelicula994.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wvi8k5fqjvVqTD573YX9eRLRo0F.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Sin Lugar para los Débiles 2007</span>
+    <span class="hidden">Un cazador de tesoros se encuentra en una espiral de violencia después de tropezar con una bolsa de dinero en medio del desierto texano. Perseguido por un despiadado asesino, se desencadena una serie de eventos mortales que ponen a prueba su astucia y su supervivencia en un juego donde cada decisión tiene consecuencias letales.</span>
+  </a>
+</li>
+<!--FIN--><!-- Hablame -->
 <li>
   <a href="../Peliculas/pelicula993.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
