--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -77,7 +77,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hablame -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Caceria -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula995.html">
+    <img src="https://image.tmdb.org/t/p/original/5WCuPRfa0h8jMT4Iu2jIIQXqllM.jpg" alt="La Cacería" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Cacería</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Hablame -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula993.html">
     <img src="https://image.tmdb.org/t/p/original/nfY0LdXZzggFKfjhyHVEHZfO484.jpg" alt="Háblame" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
