Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Sin Lugar para los Debiles -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Caceria -->
+<li>
+  <a href="../Peliculas/pelicula995.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5WCuPRfa0h8jMT4Iu2jIIQXqllM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Cacería 2020</span>
+    <span class="hidden">Doce desconocidos despiertan en el claro de un bosque. No se conocen, pero tienen algo en común: un grupo de millonarios los ha elegido para divertirse cazándolos como si fueran animales salvajes. No obstante, algunos venderán cara su piel.</span>
+  </a>
+</li>
+<!--FIN--><!-- Sin Lugar para los Debiles -->
 <li>
   <a href="../Peliculas/pelicula994.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
