Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Caceria -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Ultima Cena -->
+<li>
+  <a href="../Peliculas/pelicula996.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/rAAcqJJV4FdSNztm7qTvLUF8og4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Última Cena 2025</span>
+    <span class="hidden">En los días previos a su crucifixión, Jesús reúne a sus discípulos para la Última Cena, un momento de comunión y enseñanzas eternas. Mientras la fe se fortalece, la sombra de la traición se cierne sobre la mesa.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Caceria -->
 <li>
   <a href="../Peliculas/pelicula995.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
