--- a/Categorias/romance/index.html
+++ b/Categorias/romance/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi nombre es Khan -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Amores materialistas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula998.html">
+    <img src="https://image.tmdb.org/t/p/original/jpUFowlZitohC06voHrIyDAPVZ5.jpg" alt="Amores materialistas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Amores materialistas</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Mi nombre es Khan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula982.html">
     <img src="https://image.tmdb.org/t/p/original/jtpPxVJkYKCaxVrnetK2YYH9Fqy.jpg" alt="Mi nombre es Khan" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
