Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La pasion de Cristo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Amores materialistas -->
+<li>
+  <a href="../Peliculas/pelicula998.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jpUFowlZitohC06voHrIyDAPVZ5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Amores materialistas 2025</span>
+    <span class="hidden">Lucy es una joven casamentera de Nueva York que se encarga de unir solteros para encontrar la pareja perfecta. Sin embargo, su mundo se desestabiliza al encontrarse atrapada en un triángulo amoroso con Harry, un apuesto financiero multimillonario, y su exnovio John, un actor de poco éxito.</span>
+  </a>
+</li>
+<!--FIN--><!-- La pasion de Cristo -->
 <li>
   <a href="../Peliculas/pelicula997.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
