Crear/Actualizar HOME/Buscador.html

--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Steve -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mantis -->
+<li>
+  <a href="../Peliculas/pelicula1000.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/v1vs4RJyqzckfxPjyWN5zN1dEgH.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mantis 2025</span>
+    <span class="hidden">La sociedad secreta de asesinos a sueldo se sume en el caos y surge una nueva generación de asesinos. Sin las viejas reglas, ¿quién se atreverá a reclamar las sombras?</span>
+  </a>
+</li>
+<!--FIN--><!-- Steve -->
 <li>
   <a href="../Peliculas/pelicula999.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
