--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mantis -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Family Guy: A Little Fright Music -->
+<li>
+  <a href="../Peliculas/pelicula1001.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4bON8gBbPCG4cyFmYHcZPnHlshm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Family Guy: A Little Fright Music 2025</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN--><!-- Mantis -->
 <li>
   <a href="../Peliculas/pelicula1000.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
